%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PlayerController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: VelX
    m_Type: 1
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: VelZ
    m_Type: 1
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Grip
    m_Type: 3
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Dead
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: HolsterWeapon
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: DrawWeapon
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Firing
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: MovementLayer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: GripLayer
    m_StateMachine: {fileID: 110747370}
    m_Mask: {fileID: 101100000, guid: 28967eff4f5c59846b14a85b3b131f70, type: 2}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 1
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400018, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400020, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
    m_Threshold: .25
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400022, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
    m_Threshold: .5
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400024, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
    m_Threshold: .75
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  - m_Motion: {fileID: 7400016, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: VelX
  m_BlendParameterY: VelZ
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 1
--- !u!206 &20652785
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: VelX
  m_BlendParameterY: VelX
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110252785}
  m_DstState: {fileID: 110205342}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: DrawWeapon
    m_EventTreshold: 2
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 2
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110111038
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110279078}
  m_DstState: {fileID: 110266835}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Firing
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110113259
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110231849}
  m_TransitionDuration: .394736856
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Dead
    m_EventTreshold: 0
    m_ExitTime: .610000014
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110120982
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110280753}
  m_DstState: {fileID: 110250556}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Firing
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110129987
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268306}
  m_DstState: {fileID: 110277677}
  m_TransitionDuration: 3
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110130606
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110252643}
  m_DstState: {fileID: 110282727}
  m_TransitionDuration: .300000012
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 0
    m_ExitTime: .699999988
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110133129
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282727}
  m_DstState: {fileID: 110264914}
  m_TransitionDuration: .303025842
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: HolsterWeapon
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110137732
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110268306}
  m_DstState: {fileID: 110282972}
  m_TransitionDuration: .29613629
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: HolsterWeapon
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110139644
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205175}
  m_DstState: {fileID: 110266835}
  m_TransitionDuration: .300000012
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 3
    m_ExitTime: .699999988
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110144780
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110250556}
  m_DstState: {fileID: 110280753}
  m_TransitionDuration: .29613629
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: HolsterWeapon
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110146931
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110279078}
  m_DstState: {fileID: 110252785}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 7
    m_ConditionEvent: Grip
    m_EventTreshold: 3
    m_ExitTime: .680000007
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110147403
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282727}
  m_DstState: {fileID: 110230905}
  m_TransitionDuration: 3
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110149782
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282972}
  m_DstState: {fileID: 110252785}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 7
    m_ConditionEvent: Grip
    m_EventTreshold: 1
    m_ExitTime: .680000007
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110163502
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110252785}
  m_DstState: {fileID: 110259243}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: DrawWeapon
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 1
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110164204
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264914}
  m_DstState: {fileID: 110282727}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Firing
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110168323
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110252785}
  m_DstState: {fileID: 110252643}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: DrawWeapon
    m_EventTreshold: 1
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110172355
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110280753}
  m_DstState: {fileID: 110252785}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 7
    m_ConditionEvent: Grip
    m_EventTreshold: 2
    m_ExitTime: .680000007
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110175747
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110230905}
  m_DstState: {fileID: 110282727}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110176233
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110252785}
  m_DstState: {fileID: 110205175}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: DrawWeapon
    m_EventTreshold: 3
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 3
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110180292
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110266835}
  m_DstState: {fileID: 110279078}
  m_TransitionDuration: .29613629
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: HolsterWeapon
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110184332
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205342}
  m_DstState: {fileID: 110250556}
  m_TransitionDuration: .300000012
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 2
    m_ExitTime: .699999988
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110188893
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110259243}
  m_DstState: {fileID: 110268306}
  m_TransitionDuration: .300000012
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 6
    m_ConditionEvent: Grip
    m_EventTreshold: 1
    m_ExitTime: .699999988
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190763
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110282972}
  m_DstState: {fileID: 110268306}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: Firing
    m_EventTreshold: 0
    m_ExitTime: .684210539
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110191250
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110277677}
  m_DstState: {fileID: 110268306}
  m_TransitionDuration: 1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110196506
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264914}
  m_DstState: {fileID: 110252785}
  m_TransitionDuration: .315789461
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 7
    m_ConditionEvent: Grip
    m_EventTreshold: 0
    m_ExitTime: .680000007
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Locomotion
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 20600000}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 24, y: -72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110205175
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SpecialDraw
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400040, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 264, y: -108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110205342
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: LauncherDraw
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400036, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 264, y: -600, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110230905
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PistolFiring
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 587, y: -336, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110231849
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400042, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 24, y: -180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110250556
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: LauncherGrip
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 0, y: -600, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110252643
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PistolDraw
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400028, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 312, y: -264, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110252785
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: nullState
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 0, y: -336, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110259243
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RifleDraw
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400032, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: -324, y: -420, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110264914
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PistolHolster
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400026, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 312, y: -420, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110266835
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SpecialGrip
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 0, y: -108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110268306
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RifleGrip
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: -324, y: -336, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110277677
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RifleFiring
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: -438, y: -316, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110279078
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: SpecialHolster
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400038, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: -252, y: -108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110280753
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: LauncherHolster
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400034, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: -252, y: -600, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110282727
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PistolGrip
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: 312, y: -348, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110282972
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RifleHolster
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400030, guid: 0bbf352b1ea65034d9c0d3bda8c30044, type: 3}
  m_ParentStateMachine: {fileID: 110747370}
  m_Position: {x: -324, y: -264, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: MovementLayer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110231849}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110113259}
    data:
      first: {fileID: 110231849}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110747370
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: GripLayer
  m_DefaultState: {fileID: 110252785}
  m_States:
  - {fileID: 110252785}
  - {fileID: 110282727}
  - {fileID: 110268306}
  - {fileID: 110250556}
  - {fileID: 110266835}
  - {fileID: 110264914}
  - {fileID: 110282972}
  - {fileID: 110280753}
  - {fileID: 110279078}
  - {fileID: 110252643}
  - {fileID: 110259243}
  - {fileID: 110205342}
  - {fileID: 110205175}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110252785}
      second:
      - {fileID: 110163502}
      - {fileID: 110100000}
      - {fileID: 110168323}
      - {fileID: 110176233}
    data:
      first: {fileID: 110282727}
      second:
      - {fileID: 110133129}
    data:
      first: {fileID: 110268306}
      second:
      - {fileID: 110137732}
    data:
      first: {fileID: 110250556}
      second:
      - {fileID: 110144780}
    data:
      first: {fileID: 110266835}
      second:
      - {fileID: 110180292}
    data:
      first: {fileID: 110264914}
      second:
      - {fileID: 110196506}
      - {fileID: 110164204}
    data:
      first: {fileID: 110282972}
      second:
      - {fileID: 110149782}
      - {fileID: 110190763}
    data:
      first: {fileID: 110280753}
      second:
      - {fileID: 110172355}
      - {fileID: 110120982}
    data:
      first: {fileID: 110279078}
      second:
      - {fileID: 110146931}
      - {fileID: 110111038}
    data:
      first: {fileID: 110252643}
      second:
      - {fileID: 110130606}
    data:
      first: {fileID: 110259243}
      second:
      - {fileID: 110188893}
    data:
      first: {fileID: 110205342}
      second:
      - {fileID: 110184332}
    data:
      first: {fileID: 110205175}
      second:
      - {fileID: 110139644}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 12, y: -36, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
